--- a/android-app/food-facts/FoodFactsApp/app/src/main/AndroidManifest.xml
+++ b/android-app/food-facts/FoodFactsApp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.capx419.foodfactsapp">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FoodFactsApp">
-        <activity android:name=".MainActivity"
+        <activity android:name=".presentation.openimage.OpenImageActivity"/>
+        <activity android:name=".presentation.about.AboutActivity" />
+        <activity android:name=".presentation.detail.DetailActivity" />
+        <activity android:name=".presentation.history.HistoryActivity" />
+        <activity
+            android:name=".presentation.main.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
