--- a/android-app/food-facts/FoodFactsApp/app/build.gradle
+++ b/android-app/food-facts/FoodFactsApp/app/build.gradle
@@ -72,8 +72,11 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
 
     // Coroutines & ViewModel
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation "androidx.activity:activity-ktx:1.2.2"
+    implementation "androidx.activity:activity-ktx:1.2.3"
+
+    // Image Picker
+    implementation 'com.github.esafirm:android-image-picker:2.4.5'
 }
