feat: enable linting and formatting frontend service

--- a/.eslintignore
+++ b/.eslintignore
@@ -2,7 +2,8 @@
 **/*.*
 
 # Enable linting just for some files
-!server/food-recipe/**/*
+!server/food-recipe-calorie/**/*
+!server/frontend/**/*
 
 # dependencies
 **/node_modules
