fix: npm run start script typo causing .env not loaded
style: minor formatting fix

--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon -r dotenv/config ./src/index.ts dotenv_config_path=./.env",
     "build": "tsc  --project .",
-    "start": "node -r dotenv/config ./build/index.js dotenv_config_path=/.env"
+    "start": "node -r dotenv/config ./build/index.js dotenv_config_path=./.env"
   },
   "author": "",
   "license": "ISC",
