refactor: change analyze-food endpoint
style: minor formatting issue
ci: fix autolint on staged not working

BREAKING CHANGE:  endpoint / => /analyze-food

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "format": "prettier --write '**/*.{ts,tsx,js,jsx,json,md,html,css}'",
-    "lint": "eslint --fix .",
+    "lint": "eslint --fix",
     "prepare": "husky install"
   },
   "devDependencies": {
